--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 
 [packages]
 nmigen = {git = "https://github.com/m-labs/nmigen.git"}
+pandas = "*"
 
 [requires]
 python_version = "3.7"
