--- a/Pipfile
+++ b/Pipfile
@@ -1,13 +1,25 @@
 [[source]]
+
 name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+
 [dev-packages]
 
+flake8 = "*"
+
+
 [packages]
+
 pandas = "*"
-nmigen = {git = "https://github.com/m-labs/nmigen.git"}
+
 
 [requires]
+
 python_version = "3.7"
+
+
+[packages.nmigen]
+
+git = "https://github.com/m-labs/nmigen.git"
