--- a/Pipfile
+++ b/Pipfile
@@ -14,3 +14,4 @@ pandas = "*"
 coverage = "*"
 nmigen = {git = "https://github.com/anuejn/nmigen"}
 nmigen-boards = {git = "https://github.com/axiom-micro/nmigen-boards.git"}
+python-varname = "*"
