--- a/Pipfile
+++ b/Pipfile
@@ -15,3 +15,4 @@ coverage = "*"
 nmigen = {git = "https://github.com/anuejn/nmigen"}
 nmigen-boards = {git = "https://github.com/axiom-micro/nmigen-boards.git"}
 python-varname = "*"
+numba = "*"
