broken axi refactoring

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ coverage = "*"
 pytest = "*"
 vcd = "*"
 pytest-pycharm = "*"
+pylint = "*"
 
 [packages]
 nmigen = {git = "https://github.com/nmigen/nmigen.git"}
@@ -19,3 +20,4 @@ nmigen-boards = {git = "https://github.com/nmigen/nmigen-boards.git"}
 nmigen-soc = {git = "https://github.com/nmigen/nmigen-soc.git"}
 jinja2 = "*"
 python-varname = "*"
+monkeytype = "*"
