add simulation for hispi decoder

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ pylint = "*"
 [packages]
 nmigen = {git = "https://github.com/nmigen/nmigen.git"}
 nmigen-boards = {git = "https://github.com/nmigen/nmigen-boards.git"}
+pytest = "*"
 
 [scripts]
 test = "python -m unittest discover src -b"
