--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Install dependecies
       uses: VaultVulp/action-pipenv@v2.0.1
       with:
-        command: install -d
+        command: install -d --sequential --skip-lock
     - name: Test
       uses: VaultVulp/action-pipenv@v2.0.1
       with:
