--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ tqdm = "*"
 pytest-xdist = "*"
 psutil = "*"
 pytest-github-actions-annotate-failures = "*"
+pytest-forked = "*"
 
 [packages]
 nmigen = {git = "https://github.com/nmigen/nmigen.git"}
@@ -20,5 +21,5 @@ yowasp-yosys = "*"
 nmigen-boards = {git = "https://github.com/nmigen/nmigen-boards.git"}
 
 [scripts]
-test = "pytest -n 8 src/"
-test_fast = "pytest -n 8 -k 'not hispi' src/"
+test = "pytest --forked -n 8 src/"
+test_fast = "pytest --forked -n 8 -k 'not hispi' src/"
