--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ pytest-forked = "*"
 nmigen = {git = "https://github.com/nmigen/nmigen.git"}
 yowasp-yosys = "*"
 nmigen-boards = {git = "https://github.com/nmigen/nmigen-boards.git"}
+numpy = "*"
 
 [scripts]
 test = "pytest --forked -n 8 src/"
