begin cores for wavelet compression

--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ pytest-xdist = "*"
 psutil = "*"
 pytest-github-actions-annotate-failures = "*"
 pytest-forked = "*"
+huffman = "*"
+matplotlib = "*"
+bitarray = "*"
 
 [packages]
 nmigen = {editable = true,path = "/home/anuejn/code/nmigen"}
