--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ pytest-forked = "*"
 huffman = "*"
 matplotlib = "*"
 bitarray = "*"
+rawpy = "*"
 
 [packages]
 nmigen = {editable = true,path = "/home/anuejn/code/nmigen"}
