--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ huffman = "*"
 matplotlib = "*"
 bitarray = "*"
 rawpy = "*"
+numba = "*"
 
 [packages]
 nmigen = {editable = true,path = "/home/anuejn/code/nmigen"}
