--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ matplotlib = "*"
 bitarray = "*"
 rawpy = "*"
 numba = "*"
+pydng = {subdirectory = "src", git = "https://github.com/schoolpost/PyDNG.git"}
 
 [packages]
 nmigen = {editable = true,path = "/home/anuejn/code/nmigen"}
