refactor axi reader & writer; fix tests
* change axi to be more regular streams & bundles
* rewrite axi reader & writer to take an address (and data for the writer) stream
  and handle the burst creation on that level internally
* rewrite the ringbuffer on top of that
* the ringbuffer now tracks the levels in the buffers
* the ringbuffer now does not have knowlege about video specific stuff anymore;
  this is handled by adapters that are on top of that

* some failing tests for unrelated reasons were fixed

ALL THE CHANGES WERE NOT TESTED ON HARDWARE AND ARE UNLIKELY TO WORK AS IS

--- a/Pipfile
+++ b/Pipfile
@@ -25,8 +25,8 @@ imageio = "*"
 scipy = "*"
 
 [packages]
-nmigen = {editable = true,path = "/home/anuejn/code/nmigen"}
 yowasp-yosys = "*"
+nmigen = {git = "https://github.com/nmigen/nmigen.git"}
 nmigen-boards = {git = "https://github.com/nmigen/nmigen-boards.git"}
 
 [scripts]
