--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+sphinx = "*"
+sphinx_rtd_theme = "*"
 flake8 = "*"
 coverage = "*"
 pytest-pycharm = "*"
