--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-nap = {path = ".", editable = true}
+nap = {path = ".", editable = true, extras = ['test', 'doc'] }
 
 
 [scripts]
