--- a/.github/workflows/run_testsuite.yml
+++ b/.github/workflows/run_testsuite.yml
@@ -1,46 +1,28 @@
 name: Python Testsuite
-
 on: [push]
-
 jobs:
-  run_testsuite:
+  publish:
     runs-on: ubuntu-latest
     steps:
-    - name: Check out repository code
-      uses: actions/checkout@v2
-    - name: Install yices
-      run: |
-        sudo add-apt-repository ppa:sri-csl/formal-methods
-        sudo apt-get update
-        sudo apt-get install yices2
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: "3.9"
-    - name: Install pipenv
-      run: |
-        python -m pip install --upgrade pipenv wheel
-    - id: cache-pipenv
-      uses: actions/cache@v1
-      with:
-        path: ~/.local/share/virtualenvs
-        key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
-    - name: Install native dependencies
-      if: steps.cache-pipenv.outputs.cache-hit != 'true'
-      run: |
-        sudo apt-get update -y -qq
-        sudo apt-get install -y -qq llvm-10-dev build-essential
-        sudo ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config
-    - name: Install python dependencies
-      if: steps.cache-pipenv.outputs.cache-hit != 'true'
-      run: |
-        pipenv install -d --sequential --skip-lock
-
-    - name: Run test suite
-      env:
-        NMIGEN_USE_YOSYS: system
-        SBY: yowasp-sby
-        SMTBMC: yowasp-yosys-smtbmc
-        YOSYS: yowasp-yosys
-      run:
-        pipenv run test
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Install yices
+        run: |
+          sudo add-apt-repository ppa:sri-csl/formal-methods
+          sudo apt-get update
+          sudo apt-get install yices2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install deps
+        run: |
+          pip3 install -e .[doc,test]
+      - name: Run test suite
+        env:
+          NMIGEN_USE_YOSYS: system
+          SBY: yowasp-sby
+          SMTBMC: yowasp-yosys-smtbmc
+          YOSYS: yowasp-yosys
+        run:
+          pipenv
