add pypi deploy workflow

--- a/.github/workflows/deploy_to_pypi.yml
+++ b/.github/workflows/deploy_to_pypi.yml
@@ -2,7 +2,7 @@ name: Deploy package to pypi
 name: Production deploy
 on:
   workflow_run:
-    workflows: ["run_testsuite"]
+    workflows: ["Python Testsuite"]
     types:
       - completed
 jobs:
