--- a/.github/workflows/run_testsuite.yml
+++ b/.github/workflows/run_testsuite.yml
@@ -10,6 +10,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - name: Install twine
+        run: |
+          pip3 install twine
       - name: Build package
         run: |
           ./setup.py build sdist
