--- a/.github/workflows/run_synth.yml
+++ b/.github/workflows/run_synth.yml
@@ -1,6 +1,6 @@
 name: Vivado Builds
 
-on: [workflow_dispatch]
+on: [push]
 
 jobs:
   hdmi_test:
@@ -14,13 +14,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependecies
       run:
-        pipenv install -d --sequential --skip-lock
+        pip3 install -e .[test]
     - name: build
       env:
         NMIGEN_USE_YOSYS: system
         YOSYS: yowasp-yosys
       run:
-        pipenv run python src/experiments/hdmi_demo.py -b -d ${{ matrix.device }} -s ${{ matrix.soc_platform }}
+        python3 applets/hdmi_demo.py -b -d ${{ matrix.device }} -s ${{ matrix.soc_platform }}
     - name: upload
       uses: actions/upload-artifact@v2
       with:
