--- a/.github/workflows/test_publish.yml
+++ b/.github/workflows/test_publish.yml
@@ -9,14 +9,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: 3.8
       - name: Install fpga-tools
         run: |
           curl -s https://api.github.com/repos/yosysHQ/fpga-toolchain/releases | grep "browser_download_url.*linux.*gz" | head -n1 | cut -d : -f 2,3 | tr -d "\"" | wget -qi - -O fpga_toolchain.tar.xz
-          sudo tar -C / --strip-components=1 -xf fpga_toolchain.tar.xz
+          sudo mkdir -p /fpga-tools
+          sudo tar -C /fpga-tools --strip-components=1 -xf fpga_toolchain.tar.xz
+          echo "PATH=$PATH:/fpga-tools/bin" >> $GITHUB_ENV
       - name: Install deps
         run: |
-          pip3 install -e .[doc,test]
+         pip3 install -e .[doc,test]
       - name: Run test suite
         run:
           pytest
