--- a/.github/workflows/test_publish.yml
+++ b/.github/workflows/test_publish.yml
@@ -16,9 +16,7 @@ jobs:
           sudo tar -C / --strip-components=1 -xf fpga_toolchain.tar.xz
       - name: Install deps
         run: |
-          echo $(which pip3)
-          pip3 install numpy
-          pip3 install -e .[doc,test]
+          pip install -e .[doc,test]
       - name: Run test suite
         run:
           pytest
