--- a/.github/workflows/test_publish.yml
+++ b/.github/workflows/test_publish.yml
@@ -59,7 +59,7 @@ jobs:
             path: dist/*
 
   publish_docs:
-    if: github.ref == 'refs/heads/main'
+#    if: github.ref == 'refs/heads/main'
 #    needs: run_testsuite
     runs-on: ubuntu-latest
     outputs:
@@ -80,14 +80,14 @@ jobs:
       - name: Build docs
         run: |
           make -C doc html
-      - name: Deploy
-        id: pages
-        uses: peaceiris/actions-gh-pages@7e55c73ee896b01b8b8668370794b96f1bc9c759 #514
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: ./doc/_build/html
-          allow_empty_commit: true
+      # - name: Deploy
+      #   id: pages
+      #   uses: peaceiris/actions-gh-pages@7e55c73ee896b01b8b8668370794b96f1bc9c759 #514
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_branch: gh-pages
+      #     publish_dir: ./doc/_build/html
+      #     allow_empty_commit: true
       - name: Update docs server
         run: |
           curl ${{ secrets.DOCS_UPDATE_HOOK }}
