*: misc cleanup, reduce warnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,5 @@ addopts = -n auto
 testpaths =
     naps
     applets
+filterwarnings =
+    ignore::cryptography.utils.CryptographyDeprecationWarning
