--- a/.github/workflows/test_publish.yml
+++ b/.github/workflows/test_publish.yml
@@ -10,14 +10,20 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Install fpga-tools
-        uses: YosysHQ/setup-oss-cad-suite@v2
-      - name: Install deps
+      - name: Setup PDM
+        uses: pdm-project/setup-pdm@v3
+        with:
+          python-version: '3.10'
+      - name: Install solver
         run: |
-         pip3 install -e .[doc,test]
+          sudo add-apt-repository ppa:sri-csl/formal-methods
+          sudo apt-get update
+          sudo apt-get install yices2
+      - name: Install dependencies
+        run: pdm install -G test -G ci_test
       - name: Run test suite
         run:
-          pytest
+          SMTBMC=yowasp-yosys-smtbmc SBY=yowasp-sby YOSYS=yowasp-yosys pdm test
 
   publish_pypi:
     if: github.ref == 'refs/heads/main'
@@ -34,14 +40,18 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Setup PDM
+        uses: pdm-project/setup-pdm@v3
+        with:
+          python-version: '3.10'
       - name: Install deps
         run: |
-          pip3 install twine setuptools-scm
+          pdm install -G publish
       - name: Build package
         env:
           DOC_SHA: ${{ needs.publish_docs.outputs.doc_sha }}
         run: |
-          ./setup.py build sdist
+          pdm build
       - name: Upload to pypi
         env:
           TWINE_USERNAME: __token__
@@ -69,12 +79,16 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Setup PDM
+        uses: pdm-project/setup-pdm@v3
+        with:
+          python-version: '3.10'
       - name: Install deps
         run: |
-          pip3 install -e .[doc,test]
+          pdm install -G doc
       - name: Run sphinx autodoc
         run: |
-          sphinx-apidoc  -o doc naps
+          pdm run sphinx-apidoc  -o doc naps
       - name: Build docs
         run: |
           make -C doc html
