--- a/.github/workflows/synth.yml
+++ b/.github/workflows/synth.yml
@@ -27,16 +27,11 @@ jobs:
       uses: pdm-project/setup-pdm@v3
       with:
         python-version: '3.10'
-    - name: Install solver
-      run: |
-        sudo add-apt-repository ppa:sri-csl/formal-methods
-        sudo apt-get update
-        sudo apt-get install yices2
     - name: Install dependencies
       run: pdm install -G test -G ci_test
-    - name: Run test suite
+    - name: Synth
       run:
-        SMTBMC=yowasp-yosys-smtbmc SBY=yowasp-sby YOSYS=yowasp-yosys pdm run ${{ matrix.applet }}
+        YOSYS=yowasp-yosys pdm run ${{ matrix.applet }}
     - name: upload
       uses: actions/upload-artifact@v2
       with:
