--- a/.github/workflows/test_publish.yml
+++ b/.github/workflows/test_publish.yml
@@ -54,7 +54,7 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
           TWINE_NON_INTERACTIVE: 1
         run: |
-          twine upload dist/naps*
+          pdm run twine upload dist/naps*
       - name: upload
         if: failure()
         uses: actions/upload-artifact@v4
